# nyaya-ams

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.frontend  FRONTEND_API_GUIDE.md  README.md  backup.sh  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.ipynb  test_domain_prompts.py
.amazonq/rules/: project-context.md
backend/: app.py  example_usage.py  pytest.ini  test_agents.py  test_imports.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  drafter.py  expert_reviewer.py  researcher.py
backend/app/api/: __init__.py
backend/app/config/: transcription_config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  orchestrator.py  transcription_service.py  transcription_state.py  translation_service.py  workflow_state.py
backend/app/sockets/: transcription_handlers.py
backend/app/tests/: __init__.py  conftest.py  test_orchestrator.py  test_pii_redactor.py
backend/app/utils/: __init__.py  pii_redactor.py
backend/config/: __init__.py  domain_loader.py
backend/lawyers/: __init__.py  database.py  lawyers.db
backend/rag/: data_loader.py
backend/src/: data_loader.py  embedding.py  search.py  vector_store.py  vectorstore.py
backend/tests/: __init__.py  conftest.py  test_data_loader.py  test_embedding.py  test_search.py  test_vectorstore.py
backend/tools/: tavily_tool.py
frontend/: frontend.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.ts
(+22 files in other folders)
